Fixes according to IDEA inspections